--- a/Pagina-viajes-main/Paginaresrevasvuelos.html
+++ b/Pagina-viajes-main/Paginaresrevasvuelos.html
@@ -71,7 +71,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: 'Franklin Gothic Medium', 'Arial Narrow', s
   <div class="w3-row-padding w3-text-white w3-large">
     <div class="w3-half w3-margin-bottom">
       <div class="w3-display-container">
-        <img src="/Nueva carpeta/Descargas internet/que-hacer-toronto-2.jpg" alt="Toronto" style="width:100%">
+        <img src="/test/que-hacer-toronto-2.jpg" alt="Toronto" style="width:100%">
         <span class="w3-display-bottomleft w3-padding">Toronto</span>
       </div>
     </div>
@@ -79,13 +79,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: 'Franklin Gothic Medium', 'Arial Narrow', s
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="/Nueva carpeta/Descargas internet/quebe.jpg" alt="Quebec" style="width:100%">
+            <img src="/test/quebe.jpg" alt="Quebec" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Quebec</span>
           </div>
         </div>
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="/Nueva carpeta/Descargas internet/vancuve.jpg" alt="Vancouver" style="width:100%">
+            <img src="/test/vancuve.jpg" alt="Vancouver" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Vancouver</span>
           </div>
         </div>
@@ -93,13 +93,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: 'Franklin Gothic Medium', 'Arial Narrow', s
       <div class="w3-row-padding" style="margin:0 -16px">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="/Nueva carpeta/Descargas internet/Ottawa-1-of-1.jpg" alt="Ottawa" style="width:100%">
+            <img src="/test/Ottawa-1-of-1.jpg" alt="Ottawa" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Ottawa</span>
           </div>
         </div>
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="/Nueva carpeta/Descargas internet/calgary.jpg" alt="Calgary" style="width:100%">
+            <img src="/test/calgary.jpg" alt="Calgary" style="width:100%">
             <span class="w3-display-bottomleft w3-padding">Calgary</span>
           </div>
         </div>
@@ -114,7 +114,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: 'Franklin Gothic Medium', 'Arial Narrow', s
   </div>
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
-      <img src="/Nueva carpeta/Descargas internet/otoño.jpg" alt="Ottawa" style="width:100%">
+      <img src="/test/otoño.jpg" alt="Ottawa" style="width:100%">
       <div class="w3-container w3-white">
         <h3>Otoño en Ottawa</h3>
         <p class="w3-opacity">Pack desde $2.200</p>
@@ -123,7 +123,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: 'Franklin Gothic Medium', 'Arial Narrow', s
       </div>
     </div>
     <div class="w3-half w3-margin-bottom">
-      <img src="/Nueva carpeta/Descargas internet/nevadfa.jpg" alt="Ontario" style="width:100%">
+      <img src="/test/nevadfa.jpg" alt="Ontario" style="width:100%">
       <div class="w3-container w3-white">
         <h3>Bosque invierno,Ontario</h3>
         <p class="w3-opacity">Pack desde $2.889</p>
